Allow Jekyll to render SCSS
We need to move all the included SCSS into Jekyll's preferred location,
make the remaining three output files have the right extension (.scss,
not .css.scss) and yaml front-matter (so Jekyll renders them, instead
of just passing them through), and set $path correctly so image links
rendered using the `file-url` SCSS helper work correctly for us.

We also then need to fix some image paths in the SCSS that appear to be
broken (but maybe work in the source because they're using Rails Asset
Pipelines?).

```bash
mkdir _sass
find stylesheets -mindepth 1 -maxdepth 1 -not -name '*.css.scss' -exec mv {} _sass/ \;
for f in stylesheets/*.css.scss; do
  sed -i '' '1s/^/---\
---\
$path: '{{ "/images/" | relative_url }}';\
/g' $f
  mv $f ${f/.css.scss/.scss}
done
find _sass -name '*.scss' -print0 | \
  xargs -0 sed -i '' -E \
  -e 's/file-url\("\/images\//file-url("/g'
```

--- a/_sass/modules/_footer.scss
+++ b/_sass/modules/_footer.scss
@@ -65,12 +65,12 @@ $footer-text: $footer-link;
   overflow: hidden;
   text-indent: -999em;
 
-  background-image: file-url("/images/open-government-licence.png");
+  background-image: file-url("open-government-licence.png");
   background-repeat: no-repeat;
   background-size: 41px 17px;
 
   @include device-pixel-ratio() {
-    background-image: file-url("/images/open-government-licence_2x.png");
+    background-image: file-url("open-government-licence_2x.png");
   }
 
   @include media(tablet) {
@@ -97,7 +97,7 @@ $footer-text: $footer-link;
   padding: 115px 0 0 0;
   min-width: 125px;
 
-  background-image: file-url("/images/govuk-crest.png");
+  background-image: file-url("govuk-crest.png");
   background-size: 125px 102px;
   background-repeat: no-repeat;
   background-position: 50% 0%;
@@ -106,7 +106,7 @@ $footer-text: $footer-link;
   text-decoration: none;
 
   @include device-pixel-ratio() {
-    background-image: file-url("/images/govuk-crest-2x.png");
+    background-image: file-url("govuk-crest-2x.png");
   }    
 }
 
