--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,20 +4,20 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
-    <% if config[:tech_docs][:prevent_indexing] %>
+    {% if site.prevent_indexing %}
       <meta name="robots" content="noindex">
-    <% end %>
+    {% endif %}
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "GOV.UK Documentation" %></title>
+    <title>{{ current_page.data.title || "GOV.UK Documentation" }}</title>
 
-    <!--[if gt IE 8]><!--><%= stylesheet_link_tag :screen, media: 'screen' %><!--<![endif]-->
-    <!--[if lte IE 8]><%= stylesheet_link_tag 'screen-old-ie', media: 'screen' %><![endif]-->
+    <!--[if gt IE 8]><!--><link href="{{ "/stylesheets/screen.css" | relative_url }}" media="screen" rel="stylesheet" ><!--<![endif]-->
+    <!--[if lte IE 8]><link href="{{ "/stylesheets/screen-old-ie.css" | relative_url }}" media="screen" rel="stylesheet" ><![endif]-->
 
-    <link rel="canonical" href="<%= config[:tech_docs][:host] %><%= current_page.url %>">
+    <link rel="canonical" href="{{ site.host }}{{ current_page.url }}">
 
-    <%= stylesheet_link_tag :print, media: 'print' %>
-    <%= javascript_include_tag :application %>
+    <link href="{{ "/stylesheets/print.css" | relative_url }}" media="print" rel="stylesheet" >
+    {{ javascript_include_tag :application }}
   </head>
 
   <body>
@@ -25,7 +25,7 @@
       <div class="app-pane__header toc-open-disabled">
         <a href="#content" class="skip-link">Skip to main content</a>
 
-        <%= partial 'layouts/header' %>
+        {% include header.html %}
       </div>
 
       <div id="toc-heading" class="toc-show fixedsticky">
@@ -34,26 +34,29 @@
         </a>
       </div>
 
-      <div class="app-pane__body"<%= " data-module=\"#{yield_content(:toc_module)}\"" if content_for? :toc_module %>>
+      <div class="app-pane__body">
+      {% comment %}
+      <div class="app-pane__body"{{ " data-module=\"#{yield_content(:toc_module)}\"" if content_for? :toc_module }}>
+      {% endcomment %}
         <div class="app-pane__toc">
           <div class="toc" data-module="table-of-contents">
             <a href="#" class="toc__close js-toc-close" aria-controls="toc" aria-label="Hide table of contents"></a>
             <nav id="toc" class="js-toc-list toc__list" aria-labelledby="toc-heading">
-              <%= yield_content :sidebar %>
+              {% comment %}{{ yield_content :sidebar }}{% endcomment %}
             </nav>
           </div>
         </div>
 
         <div class="app-pane__content toc-open-disabled">
           <main id="content" class="technical-documentation" data-module="anchored-headings">
-            <%= yield %>
+            {{ content }}
           </main>
 
-          <%= partial "layouts/footer" %>
+          {% include footer.html %}
         </div>
       </div>
     </div>
 
-    <%= partial 'layouts/analytics' %>
+    {% include analytics.html %}
   </body>
 </html>
