Fix root-relative image link
On GitHub Pages, we can't be guaranteed to be running at `/`, so we need
all our images to be run through `relative_url` first.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
       {% endif %}
         {% if site.show_govuk_logo %}
           <span class="govuk-logo">
-            <img class="govuk-logo__printable-crown" src="/images/gov.uk_logotype_crown_invert_trans.png" height="32" width="36">
+            <img class="govuk-logo__printable-crown" src="{{ "/images/gov.uk_logotype_crown_invert_trans.png" | relative_url }}" height="32" width="36">
             GOV.UK
           </span>
         {% endif %}
