Display both page and site title in the titlebar
If we're not on the root index page, it's useful to have both the page
title and the site title in the tab/window title, so do that and only
then default to something generic if both are exhausted.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,11 @@
     {% endif %}
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title>{{ page.title | default: "GOV.UK Documentation" }}</title>
+    {% if page.title and page.url != "/" %}
+    <title>{{ page.title }} - {{ site.title }}</title>
+    {% else %}
+    <title>{{ site.title | default: "GOV.UK Documentation" }}</title>
+    {% endif %}
 
     <!--[if gt IE 8]><!--><link href="{{ "/stylesheets/screen.css" | relative_url }}" media="screen" rel="stylesheet" ><!--<![endif]-->
     <!--[if lte IE 8]><link href="{{ "/stylesheets/screen-old-ie.css" | relative_url }}" media="screen" rel="stylesheet" ><![endif]-->
