Make table of contents rendering more robust
If the page contains liquid markup, `markdownify` doesn't transform
that, meaning that the `replace` filter in the old code would fail and
the sidebar would end up containing the entire page again.

Because we know that the table of contents comes last in generated
content, we can split on some markup that precedes it and output that.

I think this will only break, now, if the headings themselves contain
(or are generated by) liquid code.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,10 +45,12 @@
             <nav id="toc" class="js-toc-list toc__list" aria-labelledby="toc-heading">
               {% capture toc_markdown %}
 {{ page.content }}
+<!-- TOC-start-marker -->
 * auto-gen TOC:
 {:toc}
               {% endcapture %}
-              {{ toc_markdown | markdownify | replace: content, '' }}
+              {% assign rendered_markdown_with_toc = toc_markdown | markdownify | split: '<!-- TOC-start-marker -->' %}
+              {{ rendered_markdown_with_toc[1] }}
             </nav>
           </div>
         </div>
