Use the more robust table of contents renderer
Now we have a more robust way to render tables of contents, we don't
have to exclude Jekyll-generated headers on the homepage, and don't have
to do our own set of markdown-mangling. Yay!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,14 +43,7 @@
           <div class="toc" data-module="table-of-contents">
             <a href="#" class="toc__close js-toc-close" aria-controls="toc" aria-label="Hide table of contents"></a>
             <nav id="toc" class="js-toc-list toc__list" aria-labelledby="toc-heading">
-              {% capture toc_markdown %}
-{{ page.content }}
-<!-- TOC-start-marker -->
-* auto-gen TOC:
-{:toc}
-              {% endcapture %}
-              {% assign rendered_markdown_with_toc = toc_markdown | markdownify | split: '<!-- TOC-start-marker -->' %}
-              {{ rendered_markdown_with_toc[1] }}
+              {% include toc.html html=content %}
             </nav>
           </div>
         </div>
