--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="header header--full-width">
   <div class="header__container">
     <div class="header__brand">
-        <a href="{{ site.url }}">
+        <a href="{{ '/' | relative_url }}">
         {% if site.show_govuk_logo %}
           <span class="govuk-logo">
             <img class="govuk-logo__printable-crown" src="{{ "/images/gov.uk_logotype_crown_invert_trans.png" | relative_url }}" height="32" width="36">
