Fix relative links
(for when site is mounted at sub-path)

Also use CSS rather than inline

--- a/_sass/_core.scss
+++ b/_sass/_core.scss
@@ -31,6 +31,8 @@ $desktop-breakpoint: 992px !default;
 
 @import "accessibility";
 
+@import "moj_technical_guidance";
+
 html, body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
