--- a/source/documentation/index.html.md.erb
+++ b/source/documentation/index.html.md.erb
@@ -20,6 +20,7 @@ which covers service design more broadly.
 
 * [Documenting how your service is supported](documentation/standards/documenting-how-your-service-is-supported.html)
 * [Documenting owners of infrastructure](documentation/standards/documenting-infrastructure-owners.html)
+* [How to host services](documentation/standards/hosting.html)
 * [Naming domains](documentation/standards/naming-domains.html)
 * [Supporting services out of hours](documentation/standards/out-of-hours.html)
 * [Reserving infrastructure capacity](documentation/standards/reserving-infrastructure-capacity.html)
