Fix line overhang spacing

--- a/source/documentation/standards/hosting.html.md.erb
+++ b/source/documentation/standards/hosting.html.md.erb
@@ -11,9 +11,8 @@ Platform](https://user-guide.cloud-platform.service.justice.gov.uk/) to
 host your service unless you're advised otherwise by a member of [the
 hosting team](https://peoplefinder.service.gov.uk/teams/hosting). Your
 team can get started on the Cloud Platform without letting anyone know;
-just follow [the Cloud Platform documentation
-](https://user-guide.cloud-platform.service.justice.gov.uk/) and get in
-touch with the Cloud Platform team if you need help.
+just follow [the Cloud Platform documentation](https://user-guide.cloud-platform.service.justice.gov.uk/) and
+get in touch with the Cloud Platform team if you need help.
 
 The Cloud Platform is a modern hosting platform for digital services:
 
