Add deprecation note about dsd.io and clearer guidance about what domain you get with each hosting platform

--- a/source/documentation/standards/naming-domains.html.md.erb
+++ b/source/documentation/standards/naming-domains.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Naming domains
-last_reviewed_on: 2020-08-05
+last_reviewed_on: 2021-02-10
 review_in: 3 months
 ---
 
@@ -17,7 +17,6 @@ email the [MOJ Domains team](mailto:domains@digital.justice.gov.uk),
 who will help ensure that your domain meets this standard and our
 [wider standards for naming](naming-things.html). The Domains team can also help identify which of the
 domains below your service is eligible to be hosted in.
-
 
 ## Domain your service can have a subdomain of
 
@@ -42,6 +41,19 @@ Office365), or on which MOJ has a corporate presence
 (like [GitHub](https://github.com/ministryofjustice/) or
 [Trello](https://trello.com/mojds/home)) are not required to be served
 from a `*.service.justice.gov.uk` subdomain
+
+#### Cloud and Modernisation Platform subdomains
+
+If you're using the Cloud or Modernisation Platform to host your service, you will get a subdomain
+that uses the service name of the platform.
+
+**Cloud Platform**:
+
+`cloud-platform.service.justice.gov.uk`
+
+**Modernisation Platform**:
+
+`modernisation-platform.service.justice.gov.uk`
 
 ### `justice.gov.uk`
 
@@ -97,3 +109,11 @@ You should follow the above advice for these sorts of reasons:
 ![deceptive-site-alert](images/deceptive-site-alert.png)
 
 Whilst we can get Google to remove the flag, it will keep happening.
+
+## Deprecating domains within the MOJ
+
+To reduce our reliance on non `.gov.uk` domains, the following are no longer acceptable to use for new services:
+
+- `dsd.io` subdomains
+
+There is a wider drive to reduce and stop the use of these domains within MOJ.
