Remove broken link

--- a/source/documentation/standards/hosting.html.md.erb
+++ b/source/documentation/standards/hosting.html.md.erb
@@ -90,7 +90,7 @@ Azure](https://azure.microsoft.com/), based on the needs of the
 service and its relationship to other services already in Azure.
 
 If your service is currently hosted outside of AWS or Azure, get in
-touch with [the Application Modernisation team](#TODO) to plan for its
+touch with the Application Modernisation team (TODO - add a link here) to plan for its
 future hosting.
 
 ## We pay for hosting centrally by default
