--- a/source/documentation/standards/storing-source-code.html.md.erb
+++ b/source/documentation/standards/storing-source-code.html.md.erb
@@ -70,9 +70,10 @@ exposed to GitHub organisation admins, aside from what is already public.
 You don't have to use your real name or photo - just let your colleagues know
 your username.
 
-Ask the Digital Service Desk or a member of the webops team to add you
-to the MOJ organisation. Our GitHub organisation requires that you use two-factor authorisation.
-
+To be added to the `ministryofjustice` organisation, first ensure you've enabled two-factor authentication.
+Then make a request on ServiceNow:
+[GitHub for D&T staff - Add/Remove](https://mojprod.service-now.com/moj_sp?id=sc_cat_item&sys_id=5beac6f7dbdc609050fbbfce3b96191f)
+(or ask a member of the webops team).
 
 [template repository]: https://github.com/ministryofjustice/template-repository
 [github actions]: https://github.com/ministryofjustice/github-actions
