--- a/source/documentation/standards/storing-source-code.html.md.erb
+++ b/source/documentation/standards/storing-source-code.html.md.erb
@@ -50,29 +50,31 @@ privileges for the repos.
 
 ### GitHub access
 
-#### Member of the MoJ organisation
-
-This relates to permanent employees and contractors working directly with the MoJ.
+#### Your account
 
 If you already have a GitHub account from before you joined MOJ, you can choose to use it at MOJ or create a new one. Some people prefer to have continuity with previous work; others value the separation.
 
 You must [add your MOJ email address to your
 account](https://help.github.com/articles/adding-an-email-address-to-your-github-account/).
 It doesn't matter if it's the 'primary email' or not and it's ok to make it private.
-You may want to [use that email for notifications](https://help.github.com/articles/managing-notification-emails-for-organizations/)).
+You may want to [use that email for notifications](https://help.github.com/articles/managing-notification-emails-for-organizations/).
 
 In preparation for when you leave MoJ, it's suggested you add a home email
 address to your account as the 'backup email'. The reason is that the account is
 yours, not MoJ's, so it remains your responsibility. When you leave you should
 actively close or keep control of the account. Whilst you won't retain MOJ repo
 permissions, you may have to relinquish other access you've gained in the course
-of your work (check your user settings for Organizations, Repos and
-Applications). And it might be prudent to retain the ability to change your
+of your work (for example cross-government work) - check your user settings for Organizations, Repos and
+Applications. And it might be prudent to retain the ability to change your
 account's public profile or delete public comments. Home email addresses are not
 exposed to GitHub organisation admins, aside from what is already public.
 
 You don't have to use your real name or photo - just let your colleagues know
 your username.
+
+#### Member of the MoJ organisation
+
+Being a **member** of the MoJ organisation is for staff who are permanent employees or contractors working directly with the MoJ.
 
 To be added to the `ministryofjustice` organisation, first ensure you've enabled two-factor authentication.
 Then make a request on ServiceNow:
@@ -81,7 +83,7 @@ Then make a request on ServiceNow:
 
 #### External collaborator
 
-This relates to 3rd party suppliers who are maintaining code on behalf of the MoJ. 
+Being an **external collaborator** is for 3rd party suppliers who are maintaining code on behalf of the MoJ. 
 
 External collaborators can only access specific repositories and are limited in what they can do within the MoJ organisation. They are not able to access private repositories outside of the ones they've been assigned to. They do not have access to the Cloud Platform cluster. 
 
