--- a/source/documentation/standards/how-to-get-a-domain-name.html.md.erb
+++ b/source/documentation/standards/how-to-get-a-domain-name.html.md.erb
@@ -126,3 +126,38 @@ For example, on the domain: `*._domainkey.mydomain.gov.uk`, you'd set a TXT
 record to:
 
 `v=DKIM1; p=`
+
+## Mandatory HTTPS, SSL and TLS configuration for domains
+
+Your domains must always:
+
+- Have a valid TLS certificate
+- 301 (Permanently Moved) redirect unencrypted HTTP requests to HTTPS
+- Use [HTTP Strict Transport Security (HSTS)]
+  (https://cheatsheetseries.owasp.org/cheatsheets/HTTP_Strict_Transport_Security_Cheat_Sheet.html)
+  to force all connections to use HTTPS
+- Utilise [`upgrade-insecure-requests` in your Content Security Policy (CSP)]
+  (https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Security-Policy/upgrade-insecure-requests)
+  to force all content on a service to be loaded over HTTPS
+
+Your service must always actively:
+
+- turn off TLS insecure renegotiation
+- turn off TLS insecure protocol downgrade
+- turn off TLS record compression
+- turn off export key generation
+- turn off support for SSL 2
+
+### SSL and TLS configuration
+
+You **must not** use the deprecated SSL protocol. You **must** use the TLS
+protocol.
+
+| Protocol and version | Status |
+|-|-|
+| TLS 1.3 | Latest |
+| TLS 1.2 | Long-term support |
+| TLS 1.1 | Deprecated in 2021 ([RFC 8896](https://datatracker.ietf.org/doc/rfc8996/)), [deprecated by Apple, Google, Microsoft, Mozilla in 2020](https://arstechnica.com/gadgets/2018/10/browser-vendors-unite-to-end-support-for-20-year-old-tls-1-0/) |
+| TLS 1.0 | Deprecated in 2021 ([RFC 8896](https://datatracker.ietf.org/doc/rfc8996/)), [deprecated by Apple, Google, Microsoft, Mozilla in 2020](https://arstechnica.com/gadgets/2018/10/browser-vendors-unite-to-end-support-for-20-year-old-tls-1-0/) |
+| SSLv3 | Deprecated in 2015 ([RFC 7568](https://datatracker.ietf.org/doc/html/rfc7568)) |
+| SSLv2 | Deprecated in 2011 ([RFC 6176](https://datatracker.ietf.org/doc/html/rfc6176)) |
