Make use of GitHub Pages official for hosting

--- a/source/documentation/standards/hosting.html.md.erb
+++ b/source/documentation/standards/hosting.html.md.erb
@@ -54,6 +54,13 @@ adopter by following the [Modernisation Platform user guide]
   code
 - It will support you modernising your applications
 
+## GitHub Pages
+
+Static websites are usually fine to be hosted on GitHub Pages:
+
+- It's simple to setup and maintain, with close integration with the GitHub repo, CDN, HTTPS and custom domain option
+- It scales for all but the largest and most popular sites
+
 ## Other hosting infrastructure
 
 If you think your service might require other hosting, whether in AWS, Azure, or
