Add note about GitHub Pages terms of service

--- a/source/documentation/standards/hosting.html.md.erb
+++ b/source/documentation/standards/hosting.html.md.erb
@@ -54,13 +54,6 @@ adopter by following the [Modernisation Platform user guide]
   code
 - It will support you modernising your applications
 
-## GitHub Pages
-
-Static websites are usually fine to be hosted on GitHub Pages:
-
-- It's simple to setup and maintain, with close integration with the GitHub repo, CDN, HTTPS and custom domain option
-- It scales for all but the largest and most popular sites
-
 ## Other hosting infrastructure
 
 If you think your service might require other hosting, whether in AWS, Azure, or
@@ -77,6 +70,13 @@ we've already identified the right setup for you. This includes:
 If you self-manage your own infrastructure, you should consider moving it to
 the [Cloud Platform](#cloud-platform) or the [Modernisation Platform]
 (#modernisation-platform).
+
+### Hosting static websites or documentation
+
+Static websites are usually fine to be hosted on GitHub Pages, provided they:
+
+- are simple to setup and maintain, with close integration with the GitHub repo, CDN, HTTPS and custom domain option
+- do not break ["GitHub Terms for Additional Products and Features" for Pages](https://docs.github.com/en/github/site-policy/github-terms-for-additional-products-and-features#pages)
 
 ## We use public cloud hosting by default
 
