Add guide on Welsh language sites

--- a/source/documentation/standards/naming-domains.html.md.erb
+++ b/source/documentation/standards/naming-domains.html.md.erb
@@ -97,6 +97,14 @@ working on the service to not modify data in production than to keep users out.
 GOV.UK publishing apps do this, for example compare GOV.UK Signon in their
 [Staging](https://signon.staging.publishing.service.gov.uk) and [Production]
 (https://signon.publishing.service.gov.uk) environments.
+ 
+## Welsh language versions of sites and domain naming
+ 
+Services funded by the Welsh Government can [apply for a .llyw.cymru and .gov.wales](https://gov.wales/register-and-manage-domains-llywcymru-and-govwales) domain. This doesn't apply to most services using `*.service.justice.gov.uk` or `*.justice.gov.uk` domains.
+ 
+If you are hosting a Welsh language version of your service you would still use your current registered domain. Any Welsh language pages should be handled at an application level, rather than having Welsh language in the domain name.
+ 
+For example the Welsh language version of `magistrates.judiciary.uk` should be `magistrates.judiciary.uk`, not `ynad.judiciary.uk`. 
 
 ## Non `.gov.uk` domains
 
