Add link to GDS domain guidance

--- a/source/documentation/standards/how-to-get-a-domain-name.html.md.erb
+++ b/source/documentation/standards/how-to-get-a-domain-name.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: How to get, register or manage a domain name
-last_reviewed_on: 2022-01-21
+last_reviewed_on: 2022-03-10
 review_in: 3 months
 ---
 
@@ -28,6 +28,8 @@ naming things](naming-things.html). The Operations Engineering team will also
 help identify which subdomain is most appropriate for your service.
 
 You **must not** register a domain outside of the Operations Engineering team.
+
+> Note - There are seperate processes for new gov.uk domains. If you are seeking a gov.uk or service.gov.uk domain you should [Check if your organisation can get a .gov.uk domain name](https://www.gov.uk/guidance/check-if-your-organisation-can-get-a-govuk-domain-name) in the first instance.
 
 ## Moving your domain to the central register
 
