--- a/source/documentation/standards/storing-source-code.html.md.erb
+++ b/source/documentation/standards/storing-source-code.html.md.erb
@@ -81,15 +81,15 @@ Then make a request on ServiceNow:
 [GitHub for D&T staff - Add/Remove](https://mojprod.service-now.com/moj_sp?id=sc_cat_item&sys_id=5beac6f7dbdc609050fbbfce3b96191f)
 (or ask a member of the webops team).
 
-#### External collaborator
+#### Outside Collaborator
 
-Being an **external collaborator** is for 3rd party suppliers who are maintaining code on behalf of the MoJ. 
+Being an **outside collaborator** is for third party suppliers who are maintaining code on behalf of the MoJ. 
 
-External collaborators can only access specific repositories and are limited in what they can do within the MoJ organisation. They are not able to access private repositories outside of the ones they've been assigned to. They do not have access to the Cloud Platform cluster. 
+Outside collaborators can only access specific repositories and are limited in what they can do within the MoJ organisation. They are not able to access private repositories outside of the ones they've been assigned to. They do not have access to the Cloud Platform cluster. 
 
-Users do not require an MoJ email address to be added as external collaborators.
+Users do not require an MoJ email address to be added as outside collaborators.
 
-You can add external collaborators using the [github-collaborators] tool.
+You can add outside collaborators using the [github-collaborators] tool.
 
 [template repository]: https://github.com/ministryofjustice/template-repository
 [github actions]: https://github.com/ministryofjustice/github-actions
