Update guide to reflect accepted use of LICENSE

--- a/source/documentation/standards/licencing-software-or-code.html.md.erb
+++ b/source/documentation/standards/licencing-software-or-code.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Licensing software or code
-last_reviewed_on: 2021-04-12
+last_reviewed_on: 2022-04-27
 review_in: 3 months
 ---
 
@@ -20,12 +20,12 @@ At the MOJ, we use the [MIT License](https://opensource.org/licenses/MIT).
 
 ### Each repository should include a licence file
 
-This should be called `LICENCE` or `LICENCE.md`. "License" is the U.S.
+This should be called `LICENSE` or `LICENSE.md`. "License" is the U.S.
 English spelling.
 
 GitHub will still show licence details for the British English spelling.
 
-Make sure the licence content is included in full, including the title
+Make sure the license content is included in full, including the title
 "The MIT License", so that readers are quickly able to see what licence
 is being used.
 
@@ -58,5 +58,5 @@ There's a good [guide to proper copyright and licence
 attribution](https://make.wordpress.org/themes/2014/07/08/proper-copyrightlicense-attribution-for-themes/)
 from the WordPress Theme Review Team.
 
-[This repository's licence file](https://github.com/ministryofjustice/technical-guidance/blob/master/LICENCE)
+[This repository's licence file](https://github.com/ministryofjustice/technical-guidance/blob/master/LICENSE)
 is a good example of how to attribute incorporated works' licences.
