--- a/source/documentation/standards/documenting-infrastructure-owners.html.md.erb
+++ b/source/documentation/standards/documenting-infrastructure-owners.html.md.erb
@@ -4,7 +4,7 @@ last_reviewed_on: 2021-12-20
 review_in: 3 months
 ---
 
-# <%= current_page.data.title %>
+# Documenting owners of infrastructure
 
 All of your infrastructure resources should be tagged with details of their owners, what service they are part of, and what type of environment they are in.
 
