--- a/source/documentation/standards/hosting.html.md.erb
+++ b/source/documentation/standards/hosting.html.md.erb
@@ -4,7 +4,7 @@ last_reviewed_on: 2022-02-01
 review_in: 3 months
 ---
 
-# <%= current_page.data.title %>
+# How to host services
 
 At MOJ you must use the [Cloud Platform]
 (https://user-guide.cloud-platform.service.justice.gov.uk/) to host your
