--- a/source/documentation/standards/naming-domains.html.md.erb
+++ b/source/documentation/standards/naming-domains.html.md.erb
@@ -4,7 +4,7 @@ last_reviewed_on: 2022-01-21
 review_in: 3 months
 ---
 
-# <%= current_page.data.title %>
+# Naming domains
 
 >Note: "Requesting domain changes" has moved to [How to get, register or manage
  a domain name](how-to-get-a-domain-name.html).
