--- a/source/documentation/standards/out-of-hours.html.md.erb
+++ b/source/documentation/standards/out-of-hours.html.md.erb
@@ -4,7 +4,7 @@ last_reviewed_on: 2021-04-12
 review_in: 3 months
 ---
 
-# <%= current_page.data.title %>
+# Supporting services out of hours
 
 Many of our services are used outside normal office hours (9am-6pm, Monday-Friday). To make sure people are able to keep using them with confidence, even when problems arise, it's sometimes necessary to have people on call out of hours to help with these problems.
 
