--- a/source/documentation/standards/documenting-how-your-service-is-supported.html.md.erb
+++ b/source/documentation/standards/documenting-how-your-service-is-supported.html.md.erb
@@ -4,7 +4,7 @@ last_reviewed_on: 2021-04-12
 review_in: 3 months
 ---
 
-# <%= current_page.data.title %>
+# Documenting how your service is supported
 
 All services should have a runbook that describes how they are supported, where they are hosted, and how people outside the team can check their health and report an issue.
 
