--- a/source/documentation/standards/how-to-get-a-domain-name.html.md.erb
+++ b/source/documentation/standards/how-to-get-a-domain-name.html.md.erb
@@ -4,7 +4,7 @@ last_reviewed_on: 2022-03-10
 review_in: 3 months
 ---
 
-# <%= current_page.data.title %>
+# How to get, register or manage a domain name
 
 The MOJ centrally registers and maintains domains for use across the department.
 Domains used within the MOJ must follow the [naming domains]
