--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -2,7 +2,7 @@
 title: MOJ technical guidance
 ---
 
-# <%= current_page.data.title %>
+# MOJ technical guidance
 
 This site documents some of the technical decisions that the
 [Ministry of Justice](https://www.gov.uk/government/organisations/ministry-of-justice)
