Updated to use LICENCE spelling preference
Updated to say that we prefer the UK English spelling of "LICENCE", but that the US English spelling of "LICENSE" is also accepted.

--- a/source/documentation/standards/licencing-software-or-code.html.md.erb
+++ b/source/documentation/standards/licencing-software-or-code.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Licensing software or code
-last_reviewed_on: 2022-04-27
+last_reviewed_on: 2022-04-28
 review_in: 3 months
 ---
 
@@ -20,10 +20,9 @@ At the MOJ, we use the [MIT License](https://opensource.org/licenses/MIT).
 
 ### Each repository should include a licence file
 
-This should be called `LICENSE` or `LICENSE.md`. "License" is the U.S.
-English spelling.
+This should be called `LICENCE` or `LICENCE.md`. 
 
-GitHub will still show licence details for the British English spelling.
+"License" is the U.S. English spelling. We prefer the use of "Licence", which is the U.K. English spelling, however either is acceptable. GitHub will still show licence details for the British English spelling.
 
 Make sure the license content is included in full, including the title
 "The MIT License", so that readers are quickly able to see what licence
