Add inclusive language guidance

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -39,6 +39,7 @@ which covers service design more broadly.
 ### General standards
 
 * [Using 3rd-party open source products](documentation/standards/using-3rd-party-open-source-products.html)
+* [Using inclusive language](documentation/standards/using-inclusive-language.html)
 
 ## Guides
 
