--- a/source/documentation/standards/using-inclusive-language.html.md.erb
+++ b/source/documentation/standards/using-inclusive-language.html.md.erb
@@ -16,7 +16,9 @@ The table below provides guidance for replacing offensive and outdated phrases w
 | blackbox | closed box |
 | blackhat hacker | unethical hacker |
 | blacklist | deny list |
+| disable | deactivate _or_ turn off |
 | dummy value | placeholder value |
+| enable | activate _or_ turn on |
 | girls (group) | team _or_ people |
 | grandfather | legacy |
 | grayhat hacker | hacktivist |
