Add blue team to inclusive language table

--- a/source/documentation/standards/using-inclusive-language.html.md.erb
+++ b/source/documentation/standards/using-inclusive-language.html.md.erb
@@ -16,6 +16,7 @@ The table below provides guidance for replacing offensive and outdated phrases w
 | blackbox | closed box |
 | blackhat hacker | unethical hacker |
 | blacklist | deny list |
+| blue team | cyber defence team |
 | disable | deactivate _or_ turn off |
 | dummy value | placeholder value |
 | enable | activate _or_ turn on |
@@ -33,7 +34,7 @@ The table below provides guidance for replacing offensive and outdated phrases w
 | native feature | built-in feature |
 | normal | typical |
 | pronouns when you don't know someone's | they, them, theirs _or_ ask them |
-| red team | cyber offense team |
+| red team | cyber offence team |
 | scrum master | scrum coach |
 | webmaster | web product owner |
 | white team | cyber exercise team |
