remove the quotes from the slack channel name

--- a/source/documentation/standards/reserving-infrastructure-capacity.html.md.erb
+++ b/source/documentation/standards/reserving-infrastructure-capacity.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: “#operations-engineering-alerts”
+owner_slack: #operations-engineering-alerts
 title: Reserving infrastructure capacity
 last_reviewed_on: 2021-04-12
 review_in: 3 months
