--- a/source/documentation/standards/storing-source-code.html.md.erb
+++ b/source/documentation/standards/storing-source-code.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: “#operations-engineering-alerts”
+owner_slack: #operations-engineering-alerts
 title: Storing source code
 last_reviewed_on: 2022-01-20
 review_in: 3 months
