--- a/source/documentation/standards/documenting-infrastructure-owners.html.md.erb
+++ b/source/documentation/standards/documenting-infrastructure-owners.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: “#operations-engineering-alerts”
+owner_slack: #operations-engineering-alerts
 title: Documenting owners of infrastructure
 last_reviewed_on: 2021-12-20
 review_in: 3 months
