--- a/source/documentation/standards/how-to-get-a-domain-name.html.md.erb
+++ b/source/documentation/standards/how-to-get-a-domain-name.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: “#operations-engineering-alerts”
+owner_slack: #operations-engineering-alerts
 title: How to get, register or manage a domain name
 last_reviewed_on: 2022-03-10
 review_in: 3 months
