--- a/source/documentation/standards/naming-domains.html.md.erb
+++ b/source/documentation/standards/naming-domains.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: “#operations-engineering-alerts”
+owner_slack: #operations-engineering-alerts
 title: Naming domains
 last_reviewed_on: 2022-01-21
 review_in: 3 months
