apply straight quotes to slack channel

--- a/source/documentation/standards/licencing-software-or-code.html.md.erb
+++ b/source/documentation/standards/licencing-software-or-code.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: #operations-engineering-alerts
+owner_slack: "#operations-engineering-alerts"
 title: Licensing software or code
 last_reviewed_on: 2022-04-28
 review_in: 3 months
